version/0.8/_sources/api/ansys/speos/core/simulation/BaseSimulation.rst.txt






:class:`BaseSimulation`
=======================

.. toctree::
   :hidden:

    SourceSampling</api/ansys/speos/core/simulation/BaseSimulation.SourceSampling>
    Weight</api/ansys/speos/core/simulation/BaseSimulation.Weight>


.. py:class:: ansys.speos.core.simulation.BaseSimulation(project, name, description = '', metadata = None, simulation_instance = None)

   
   Super Class for all simulations.


   :Parameters:

       **project** : :obj:`ansys.speos.core.project.Project`
           Project in which simulation shall be created.

       **name** : :class:`python:str`
           Name of the simulation.

       **description** : :class:`python:str`
           Description of the Simulation.
           By default, ``""``.

       **metadata** : :obj:`Optional`\[:obj:`Mapping`\[:class:`python:str`, :class:`python:str`]]
           Metadata of the feature.
           By default, ``{}``.

       **simulation_instance** : :obj:`ansys.api.speos.scene.v2.scene_pb2.Scene.SimulationInstance`, :obj:`optional`
           Simulation instance to provide if the feature does not have to be created from scratch
           By default, ``None``, means that the feature is created from scratch by default.











   .. rubric:: Notes

   This is a Super class, **Do not instantiate this class yourself**



   ..
       !! processed by numpydoc !!



.. py:currentmodule:: BaseSimulation

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~export`
            - Export simulation.
          * - :py:attr:`~set_texture_normalization_unspecified`
            - Set texture normalization to unspecified.
          * - :py:attr:`~set_texture_normalization_none`
            - Disable texture normalization.
          * - :py:attr:`~set_texture_normalization_color_from_texture`
            - Set texture normalization to color-from-texture mode.
          * - :py:attr:`~set_texture_normalization_color_from_bsdf`
            - Set texture normalization to color-from-BSDF mode.
          * - :py:attr:`~compute_CPU`
            - Compute the simulation on CPU.
          * - :py:attr:`~compute_GPU`
            - Compute the simulation on GPU.
          * - :py:attr:`~stop_computation`
            - Stop the simulation computation.
          * - :py:attr:`~get`
            - Get dictionary corresponding to the project - read only.
          * - :py:attr:`~commit`
            - Save feature: send the local data to the speos server database.
          * - :py:attr:`~reset`
            - Reset feature: override local data by the one from the speos server database.
          * - :py:attr:`~delete`
            - Delete feature: delete data from the speos server database.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~sensor_paths`
            - Sensor paths.
          * - :py:attr:`~source_paths`
            - Source paths.
          * - :py:attr:`~geom_distance_tolerance`
            - Geometry distance tolerance.
          * - :py:attr:`~max_impact`
            - Maximum number of impacts.
          * - :py:attr:`~texture_normalization`
            - Return Texture Normalization Type of the Simulation.


   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~simulation_template_link`
            - Link object for the simulation template in database.
          * - :py:attr:`~job_link`
            - Link object for the job in database.
          * - :py:attr:`~result_list`
            - List of results created after a simulation compute.



   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - Return the string representation of the simulation.




Import detail
-------------

.. code-block:: python

    from ansys.speos.core.simulation import BaseSimulation

Property detail
---------------

.. py:property:: sensor_paths
   :type: List[str]


   
   Sensor paths.

   This property gets or sets the sensor paths that the simulation will take into account.

   :Parameters:

       **sensor_paths** : :obj:`List`\[:class:`python:str`]
           The sensor paths.



   :Returns:

       :obj:`List`\[:class:`python:str`]
           The sensor paths.











   ..
       !! processed by numpydoc !!

.. py:property:: source_paths
   :type: List[str]


   
   Source paths.

   This property gets or sets the source paths that the simulation will take into account.

   :Parameters:

       **source_paths** : :obj:`List`\[:class:`python:str`]
           The source paths.



   :Returns:

       :obj:`List`\[:class:`python:str`]
           The source paths.











   ..
       !! processed by numpydoc !!

.. py:property:: geom_distance_tolerance
   :type: float


   
   Geometry distance tolerance.

   This property gets or sets the geometry distance tolerance
   used by the virtual bsdf bench simulation.

   :Parameters:

       **value** : :class:`python:float`
           Maximum distance in mm to consider two faces as tangent to assign.
           By default, ``0.01``



   :Returns:

       :class:`python:float`
           Maximum distance in mm to consider two faces as tangent.











   ..
       !! processed by numpydoc !!

.. py:property:: max_impact
   :type: int


   
   Maximum number of impacts.

   This property gets or sets the maximum number of impacts
   used by the virtual bsdf bench simulation.

   :Parameters:

       **value** : :class:`python:int`
           The maximum number of impacts to assign.
           By default, ``100``.



   :Returns:

       :class:`python:int`
           The maximum number of impacts.











   ..
       !! processed by numpydoc !!

.. py:property:: texture_normalization
   :type: Union[ansys.speos.core.generic.parameters.TextureNormalizationTypes]


   
   Return Texture Normalization Type of the Simulation.





   :Returns:

       :obj:`Union`\[:obj:`TextureNormalizationTypes`]
           Provides clear text readable texture normalization applied during simulation.











   ..
       !! processed by numpydoc !!



Attribute detail
----------------

.. py:attribute:: simulation_template_link
   :value: None


   
   Link object for the simulation template in database.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: job_link
   :value: None


   
   Link object for the job in database.
















   ..
       !! processed by numpydoc !!

.. py:attribute:: result_list
   :value: []


   
   List of results created after a simulation compute.
















   ..
       !! processed by numpydoc !!



Method detail
-------------

.. py:method:: export(export_path)

   
   Export simulation.


   :Parameters:

       **export_path: Union[str, Path]**
           directory to export simulation to.



   :Returns:

       :data:`python:None`
           ..











   ..
       !! processed by numpydoc !!

.. py:method:: set_texture_normalization_unspecified()

   
   Set texture normalization to unspecified.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_texture_normalization_none()

   
   Disable texture normalization.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_texture_normalization_color_from_texture()

   
   Set texture normalization to color-from-texture mode.
















   ..
       !! processed by numpydoc !!

.. py:method:: set_texture_normalization_color_from_bsdf()

   
   Set texture normalization to color-from-BSDF mode.
















   ..
       !! processed by numpydoc !!

.. py:method:: compute_CPU(threads_number = None, export_vtp = False)

   
   Compute the simulation on CPU.


   :Parameters:

       **threads_number** : :class:`python:int`, :obj:`optional`
           The number of threads used.
           By default, ``None``, means the number of processor available.

       **export_vtp: bool, optional**
           True to generate vtp from the simulation results.



   :Returns:

       :obj:`Union`\[:class:`python:tuple`\[:class:`python:list`\[:obj:`Result`], :class:`python:list`\[:obj:`Path`]], :class:`python:list`\[:obj:`Result`]]
           List of simulation results or 2 lists of simulation results
            and exported vtp results.











   ..
       !! processed by numpydoc !!

.. py:method:: compute_GPU(export_vtp = False)

   
   Compute the simulation on GPU.


   :Parameters:

       **export_vtp: bool, optional**
           True to generate vtp from the simulation results.



   :Returns:

       :obj:`Union`\[:class:`python:tuple`\[:class:`python:list`\[:obj:`Result`], :class:`python:list`\[:obj:`Path`]], :class:`python:list`\[:obj:`Result`]]
           List of simulation results or 2 lists of simulation results
            and exported vtp results.











   ..
       !! processed by numpydoc !!

.. py:method:: stop_computation()

   
   Stop the simulation computation.
















   ..
       !! processed by numpydoc !!

.. py:method:: get(key = '')

   
   Get dictionary corresponding to the project - read only.


   :Parameters:

       **key: str**
           ..



   :Returns:

       :class:`python:str` | :class:`python:dict`
           Dictionary of Simulation Feature











   ..
       !! processed by numpydoc !!

.. py:method:: __str__()

   
   Return the string representation of the simulation.
















   ..
       !! processed by numpydoc !!

.. py:method:: commit()

   
   Save feature: send the local data to the speos server database.





   :Returns:

       :obj:`ansys.speos.core.simulation.BaseSimulation`
           Simulation feature.











   ..
       !! processed by numpydoc !!

.. py:method:: reset()

   
   Reset feature: override local data by the one from the speos server database.





   :Returns:

       :obj:`ansys.speos.core.simulation.BaseSimulation`
           Simulation feature.











   ..
       !! processed by numpydoc !!

.. py:method:: delete()

   
   Delete feature: delete data from the speos server database.

   The local data are still available




   :Returns:

       :obj:`ansys.speos.core.simulation.BaseSimulation`
           Simulation feature.











   ..
       !! processed by numpydoc !!






Classes
-------

.. autoapisummary::

    ansys.speos.core.simulation.BaseSimulation.SourceSampling
    ansys.speos.core.simulation.BaseSimulation.Weight




